--- a/index.css
+++ b/index.css
@@ -37,6 +37,7 @@
 
 .card {
     display: inline-block;
+    flex: 0 0 auto;
     width: 40%;
     min-width: 300px;
     height: 10rem;
@@ -47,7 +48,7 @@
 }
 
 .card__title {
-    margin-bottom: 5%;
+    margin-bottom: 1rem;
     font-size: 2rem;
 }
 
